Fixed issue with jdk.internal.misc module